fix jumping proplem

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -48,6 +48,9 @@ html,body
 body
   background-color: $colorBlue
 
+.pages_area
+  min-height: 100vh
+
 // html
 //   border: solid 10px white
 //   box-sizing: border-box
@@ -66,7 +69,7 @@ body
 //       padding: 5px 10px
 //       &:first-child
 //         padding-left: 15px
-//       &:last-child
+//       &:last-chil
 //         padding-right: 15px
 //     min-width: 200px
     //min-width: 110px
@@ -77,11 +80,14 @@ body
 $page_trans_time: 0.5s
 
 
-.fade-enter-active,.fade-leave-active
+.page-enter-active,.page-leave-active
   transition: $page_trans_time
   transition-timing-function: ease-in
   position: relative
   min-height: 100vh
+  .placeholder_body
+    height: 100vh
+    transition-delay: 0.5s
   footer
     margin-top: 100vh
   // opacity: 0
@@ -98,40 +104,44 @@ $page_trans_time: 0.5s
   //   top: 100vh
   //   transition-timing-function: ease-in
     // box-shadow: 0px 20px white
-  // &:after
-  //   display: block
-  //   content: ""
-  //   opacity: 0
-  //   transition: $page_trans_time
-  //   height: 100vh
-  //   position: fixed
-  //   z-index: 1
-  //   left: 0
-  //   width: 100%
-  //   top: 0
-  //   background-color: $colorBlue
-.fade-enter-active
+  &:after
+    display: block
+    content: ""
+    opacity: 0
+    transition: $page_trans_time
+    height: 100vh
+    position: fixed
+    +size(100%)
+    z-index: 1
+    left: 0
+    width: 100%
+    top: 0
+    background-color: $colorBlue
+.page-enter-active
   opacity: 1
   transition-timing-function: ease-out
-  min-height: 100vh
   &:before
     top: 0
     transition-timing-function: ease-out
     // box-shadow: 0px 20px white
-.fade-enter
+.page-enter
   opacity: 0
   top: 30px
-.fade-enter-to
+  &:after
+    opacity: 1
+.page-enter-to
   opacity: 1
   top: 0px
   // &:before
   //   top: -100vh
-  // &:after
-  //   opacity: 0
-.fade-leave
+  &:after
+    opacity: 0
+.page-leave
   opacity: 1
   top: 0px
-.fade-leave-to
+  &:after
+    opacity: 0
+.page-leave-to
   opacity: 0
   top: -30px
   &.page.pageIndex .sectionHero 
@@ -143,8 +153,8 @@ $page_trans_time: 0.5s
 
   // &:before 
   //   top: 0
-  // &:after
-  //   opacity: 1
+  &:after
+    opacity: 1
 
 
 .fade-enter-to,.fade-leave
@@ -152,14 +162,14 @@ $page_trans_time: 0.5s
 
 
 
-// .fade-delay-enter-active
-//   transition: opacity .5s .5s
-// .fade-delay-leave-active
-//   transition: opacity .5s
+.fade-enter-active
+  transition: opacity .5s
+.fade-leave-active
+  transition: opacity .5s
 
-// .fade-delay-enter,.fade-delay-leave-to
-//   opacity: 0
-// .fade-delay-enter-to,.fade-delay-leave
-//   opacity: 1
+.fade-enter,.fade-leave-to
+  opacity: 0
+.fade-enter-to,.fade-leave
+  opacity: 1
 
 
